--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Get your resistance value just by the colour scheme of the resistor without any calculations :)">
     <title>Resistance Calculator</title>
 
     <link rel="stylesheet" href="resistor.css">
